Fix scroll arrows overlapping nav bar

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -5,6 +5,7 @@
     padding:5px 10px;
     position: fixed;
     width: 100vw;
+    z-index:100;
   }
 
 
